projects/특이점이-온-개발자-MSA/code/ex03/k8s/gateway/gateway-ingress.yml
# 외부 진입점. 클러스터 외부 트래픽이 gateway-service로 들어옴
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-ingress
  namespace: metacoding
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gateway-service
                port:
                  number: 80
